--- a/web.config
+++ b/web.config
@@ -9,7 +9,7 @@
         </defaultDocument>
         <rewrite>
             <rules>
-                <rule name="Silex Front Controller" stopProcessing="true">
+                <rule name="Controller" stopProcessing="true">
                     <match url="^(.*)$" ignoreCase="false" />
                     <conditions logicalGrouping="MatchAll">
                         <add input="{REQUEST_FILENAME}" matchType="IsFile" ignoreCase="false" negate="true" />
