updated framework and added example

--- a/Config/config.ini
+++ b/Config/config.ini
@@ -1,14 +1,14 @@
 [Config]
 # App settings
-project_name = ''
-site_title = '(Project Name Here)'
-index = ''
+project_name = 'MVC_Template'
+site_title = 'Notes App'
+index = 'home'
 
 # Database settings
-hostname = ''
-username = ''
-password = ''
-database = ''
+hostname = 'localhost'
+username = 'root'
+password = '16647240'
+database = 'notes'
 
 # Logger settings
-table_name = ''
+table_name = 'log'
